# embed-resource

./: CMakeLists.txt  README.md  embedresource-cpp-11.cpp
example/: main.cpp
include/embed_resource/: loader.h
src/: embed_resource.cpp
